<resources>
    <string name="app_name">Cargo</string>
    <!-- App Dialog Text-->
    <string name="dialog_tit">Change neighborhood</string>
    <string name="curr_location">Delhi</string>
    <string name="dest_location">Mumbai</string>
    <string name="del_location">Remove</string>
    <string name="add_location">Add neighborhood</string>
    <!-- Query Item Fragment -->
    <string name="pro_pic">Profile Picture</string>
    <string name="post">Post</string>
    <!-- Query View Holder -->
    <string name="img_desc">First Letter for User Name</string>
    <string name="mnu_img_desc">Menu Option</string>
    <string name="comment_text">Answer</string>
    <string name="comment_text_1">Comment</string>
    <string name="start_text">Star</string>
    <string name="like_text">Like</string>
    <string name="img_close">Close</string>
</resources>