<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/sender_profile_Name_selected"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="8dp"
        android:padding="8dp"
        app:cardBackgroundColor="@color/orange"
        app:cardCornerRadius="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/SenderTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="S" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/sender_name_selected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintLeft_toRightOf="@id/sender_profile_Name_selected"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/sender_profile_Name_selected"
        tools:text="@string/dialog_tit" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:drawablePadding="4dp"
        android:gravity="center"
        android:text="@string/curr_location"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:drawableTint="@color/grey"
        app:layout_constraintLeft_toRightOf="@id/sender_profile_Name_selected"
        app:layout_constraintTop_toBottomOf="@id/sender_name_selected" />

    <TextView
        android:id="@+id/query_title_selected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/app_color"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintLeft_toLeftOf="@id/sender_name_selected"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sender_profile_Name_selected"
        tools:text="Hello I'm Anuj Rai And i'm Looking for job As Android developer Can you find One for me that Would for Be Grate full.And you Cna find for me that would be absolute Commendable ?" />


    <TextView
        android:id="@+id/no_of_likes_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:textColor="@color/grey"
        android:textSize="11sp"
        app:layout_constraintRight_toRightOf="@id/query_title_selected"
        app:layout_constraintTop_toBottomOf="@id/query_title_selected"
        tools:text="10 Likes . 1 Answer" />

    <View
        android:id="@+id/out_line_view_selected"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:background="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_of_likes_selected" />

    <TextView
        android:id="@+id/start_icon_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/start_text"
        android:textColor="@color/light_blue"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/out_line_view_selected"
        app:layout_constraintTop_toBottomOf="@id/out_line_view_selected" />

    <TextView
        android:id="@+id/like_icon_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="8dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/like_text"
        android:textColor="@color/light_blue"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias=".46"
        app:layout_constraintLeft_toLeftOf="@id/out_line_view_selected"
        app:layout_constraintRight_toRightOf="@id/out_line_view_selected"
        app:layout_constraintTop_toBottomOf="@id/out_line_view_selected" />


    <TextView
        android:id="@+id/comment_icon_selected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:drawablePadding="4dp"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/comment_text"
        android:textColor="@color/orange"
        android:textSize="11sp"
        app:drawableStartCompat="@drawable/ic_comment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="@id/out_line_view_selected"
        app:layout_constraintTop_toBottomOf="@id/out_line_view_selected" />

</androidx.constraintlayout.widget.ConstraintLayout>