<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="10dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="26dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycle_view"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:background="@color/black"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            app:layout_constraintLeft_toLeftOf="@id/my_recycle_view"
            app:layout_constraintRight_toRightOf="@id/my_recycle_view"
            app:layout_constraintTop_toBottomOf="@id/my_recycle_view">

            <TextView
                android:id="@+id/comment_icon_click"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/montserrat"
                android:padding="10dp"
                android:text="@string/comment_text_1"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_comment"
                app:drawableTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_margin="8dp"
                android:src="@drawable/myimage"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/voice_image"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:visibility="gone"
                app:cardCornerRadius="100dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/roundedImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/pro_pic"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/ic_voice" />
            </androidx.cardview.widget.CardView>

            <EditText
                android:id="@+id/myTextEdit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:background="@null"
                android:fontFamily="@font/montserrat"
                android:hint="@string/comment_text"
                android:textColor="@color/white"
                android:textColorHint="#B1AFAF"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/profile_image"
                app:layout_constraintRight_toLeftOf="@id/voice_image"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>