<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.QueryItemFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_color">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_scrollFlags="scroll|enterAlways">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar_layout_all"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.cardview.widget.CardView
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:elevation="10dp"
                        android:padding="5dp"
                        app:cardCornerRadius="100dp">

                        <ImageView
                            android:id="@+id/roundedImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:contentDescription="@string/pro_pic"
                            android:scaleType="centerCrop"
                            android:src="@drawable/myimage" />
                    </androidx.cardview.widget.CardView>

                    <ImageView
                        android:id="@+id/location_click"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_shape"
                        android:contentDescription="@string/add_location"
                        android:padding="5dp"
                        android:src="@drawable/ic_location" />

                    <ImageView
                        android:id="@+id/search_click"
                        android:layout_width="40dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/round_shape"
                        android:contentDescription="@string/add_location"
                        android:padding="5dp"
                        android:src="@drawable/ic_search" />

                    <Button
                        android:id="@+id/post_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="8dp"
                        android:drawablePadding="4dp"
                        android:background="@drawable/round_btn"
                        android:drawableLeft="@drawable/ic_add"
                        android:drawableTint="@color/white"
                        android:text="@string/post"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/app_btn_color"
                        app:boxStrokeWidthFocused="4dp" />

                </androidx.appcompat.widget.Toolbar>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/Main_recycle_View"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/app_color"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>