<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="3dp"
    android:background="#EEEAEA">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/receiver_profile_Name"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            app:cardBackgroundColor="@color/app_color"
            app:cardCornerRadius="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/roundedReceiverTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="R" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/receiver_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/white"
            android:textSize="13sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/receiver_profile_Name"
            app:layout_constraintTop_toTopOf="@id/receiver_profile_Name"
            tools:text="@string/dialog_tit" />

        <TextView
            android:id="@+id/receiver_answer_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="10dp"
            android:paddingBottom="8dp"
            android:fontFamily="@font/montserrat"
            android:textColor="@color/app_color_text"
            android:textSize="15sp"
            android:textStyle="normal"
            app:layout_constraintLeft_toLeftOf="@id/receiver_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/receiver_name"
            tools:text="Hello I'm Anuj Rai And i'm Looking for job As Android developer Can you find One for me that Would for Be Grate full.And you Cna find for me that would be absolute Commendable ?" />


        <ImageView
            android:id="@+id/menu_icon_comment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_three_dot"
            android:backgroundTint="@color/dark_grey"
            android:contentDescription="@string/mnu_img_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="@id/receiver_answer_title"
            app:layout_constraintTop_toBottomOf="@id/receiver_answer_title" />

        <TextView
            android:id="@+id/like_comment_icon"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:textStyle="bold"
            android:layout_marginEnd="30dp"
            android:drawablePadding="3dp"
            android:gravity="bottom"
            android:textColor="@color/black"
            app:drawableEndCompat="@drawable/ic_like"
            app:drawableTint="@color/dark_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/menu_icon_comment"
            app:layout_constraintTop_toBottomOf="@id/receiver_answer_title"
            tools:text="2" />


        <ImageView
            android:id="@+id/share_icon_comment"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/ic_reply"
            android:backgroundTint="@color/dark_grey"
            android:contentDescription="@string/post"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/like_comment_icon"
            app:layout_constraintTop_toBottomOf="@id/receiver_answer_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>